force-app/main/default/objects/BrillioFC__Tab_Detail__c/BrillioFC__Tab_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Tab Detail</label>
    <nameField>
        <label>ForceClinic Tab Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Tab Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>