force-app/main/default/objects/BrillioFC__Tab_Detail__c/fields/BrillioFC__APIName__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__APIName__c</fullName>
    <externalId>true</externalId>
    <label>APIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>