force-app/main/default/objects/BrillioFC__Tab_Detail__c/fields/BrillioFC__sObjectName__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__sObjectName__c</fullName>
    <label>sObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>